--- a/datahub-ui/example/index.html
+++ b/datahub-ui/example/index.html
@@ -388,11 +388,11 @@
 
     var dataMulti = {
         timestamp: datahub.data.generateTimeSeries(12, 1, '2016-01-01', 'month', 1).timestamps,
-        barData: datahub.data.generateTimeSeries(12, 1, '2016-01-01', 'month', 1),
+        // barData: datahub.data.generateTimeSeries(12, 1, '2016-01-01', 'month', 1),
         stackedBarData: datahub.data.generateTimeSeries(8, 3, '2016-01-01', 'month', 1),
         estimateBarData: datahub.data.generateTimeSeries(4, 1, '2016-09-01', 'month', 1),
         lineData: datahub.data.generateTimeSeries(12, 2, '2016-01-01', 'month', 1),
-        areaData: datahub.data.generateTimeSeries(12, 1, '2016-01-01', 'month', 1),
+        // areaData: datahub.data.generateTimeSeries(12, 1, '2016-01-01', 'month', 1),
         referenceData: datahub.data.generateTimeSeries(8, 1, '2016-01-01', 'month', 1),
         thresholdData: datahub.data.generateTimeSeries(1, 1, '2016-01-01', 'month', 12)
     }
