--- a/datahub-ui/example/index.html
+++ b/datahub-ui/example/index.html
@@ -164,6 +164,14 @@
     </div>
     <div class="row section">
         <div class="col-xs-12 col-md-7">
+            <div class="chart-dummy dummy"></div>
+        </div>
+        <div class="col-xs-12 col-md-5">
+            <div class="description">A chart can have a "dummy" state to act like a placeholder.</div>
+        </div>
+    </div>
+    <div class="row section">
+        <div class="col-xs-12 col-md-7">
             <div class="row">
                 <div class="number-widget big col-xs"></div>
                 <div class="number-widget medium col-xs"></div>
@@ -446,6 +454,18 @@
     datahub.chart.multi({
         parent: container,
         width: container.clientWidth
+    })
+
+    var dataMulti = {
+        timestamp: datahub.data.generateTimeSeries(12, 1, '2016-01-01', 'month', 1).timestamps,
+        barData: datahub.data.generateTimeSeries(12, 1, '2016-01-01', 'month', 1),
+    }
+
+    var container = document.querySelector('.chart-dummy')
+    datahub.chart.multi({
+        parent: container,
+        width: container.clientWidth,
+        data: datahub.data.mergeTimeseries(dataMulti)
     })
 
     var sliderChartContainer = document.querySelector('.slider-chart')
