--- a/datahub-ui/example/index.html
+++ b/datahub-ui/example/index.html
@@ -15,6 +15,7 @@
     <script src="../src/datahub-widget.js"></script>
     <script src="../src/datahub-group.js"></script>
     <script src="../src/datahub-chart.js"></script>
+    <script src="../src/datahub-table-chart.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.2/leaflet.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.7/leaflet.draw.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" />
@@ -176,6 +177,14 @@
         </div>
         <div class="col-xs-12 col-md-5">
             <div class="description">A chart can have a "dummy" state to act like a placeholder.</div>
+        </div>
+    </div>
+    <div class="row section">
+        <div class="col-xs-12 col-md-7">
+            <div class="table-chart"></div>
+        </div>
+        <div class="col-xs-12 col-md-5">
+            <div class="description">A table chart.</div>
         </div>
     </div>
     <div class="row section">
@@ -537,6 +546,30 @@
     })
 
     renderMainChart(dataMulti)
+
+    var table = datahub.tableChart({
+        parent: document.querySelector('.table-chart'),
+        header: [
+            {key: 'name', label: 'Name'},
+            {key: 'actual', label: 'Actual'},
+            {key: 'plan', label: 'Plan'}
+        ], 
+        elements: [
+            [
+                {key: 'name', value: 'Spain', label: 'Spain' },
+                {key: 'actual', value: -20, label: -20 },
+                {key: 'plan', value: -30, label: -30 }
+            ],
+            [
+                {key: 'name', value: 'germany', label: 'Germany' },
+                {key: 'actual', value: 10, label: 10 },
+                {key: 'plan', value: 40, label: 40 }
+            ]
+        ],
+        valueKey: 'actual',
+        referenceKey: 'plan',
+        domain: [-40, 160]
+    })
 
     var number = datahub.widget.number({
             parent: document.querySelector('.number-widget.big'),
