--- a/datahub-ui/example/index.html
+++ b/datahub-ui/example/index.html
@@ -177,7 +177,23 @@
             <div class="gaps"></div>
         </div>
         <div class="col-xs-12 col-md-5">
-            <div class="description">Most charts handle irregular data with gaps.</div>
+            <div class="description">Stacked area chart handle data with gaps.</div>
+        </div>
+    </div>
+    <div class="row section">
+        <div class="col-xs-12 col-md-7">
+            <div class="gaps2"></div>
+        </div>
+        <div class="col-xs-12 col-md-5">
+            <div class="description">Line and area charts handle data with gaps.</div>
+        </div>
+    </div>
+    <div class="row section">
+        <div class="col-xs-12 col-md-7">
+            <div class="isolated"></div>
+        </div>
+        <div class="col-xs-12 col-md-5">
+            <div class="description">Line and area charts handle isolated data points.</div>
         </div>
     </div>
     <div class="row section">
@@ -559,7 +575,41 @@
     dataMulti.stackedAreaData[6].value = dataMulti.stackedAreaData[6].value.slice(1, 2)
 
     datahub.chart.multi({
-        parent: document.querySelector('.gaps'),
+        parent: document.querySelector('.gaps')
+    })
+    .setData(dataMulti)
+
+    var dataMulti = {
+        timestamp: datahub.data.generateTimestamps(12, 1, '2016-01-01', 'month', 1),
+        lineData: datahub.data.generateTimeSeries(12, 3, '2016-01-01', 'month', 1),
+        areaData: datahub.data.generateTimeSeries(12, 3, '2016-01-01', 'month', 1)
+    }
+
+    dataMulti.lineData.forEach(function(d) {
+        d.value =  d.value.map(function(dB, iB) {
+            return !!Math.round(Math.random()*3) ? dB : null
+        })
+    })
+
+    dataMulti.areaData.forEach(function(d) {
+        d.value =  d.value.map(function(dB, iB) {
+            return !!Math.round(Math.random()*3) ? dB : null
+        })
+    })
+
+    datahub.chart.multi({
+        parent: document.querySelector('.gaps2')
+    })
+    .setData(dataMulti)
+
+    var dataMulti = {
+        timestamp: datahub.data.generateTimestamps(12, 1, '2016-01-01', 'month', 1),
+        lineData: datahub.data.generateTimeSeries(1, 3, '2016-05-01', 'month', 1),
+        areaData: datahub.data.generateTimeSeries(1, 1, '2016-05-01', 'month', 1)
+    }
+
+    datahub.chart.multi({
+        parent: document.querySelector('.isolated')
     })
     .setData(dataMulti)
 
