--- a/datahub-ui/example/index.html
+++ b/datahub-ui/example/index.html
@@ -422,10 +422,17 @@
 
     var dataMulti = {
         timestamp: datahub.data.generateTimestamps(12, 1, '2016-01-01', 'month', 1),
-        barData: datahub.data.generateTimeSeries(12, 1, '2016-01-01', 'month', 1)
+        barData: datahub.data.generateTimeSeries(12, 1, '2016-01-01', 'month', 1),
+        referenceData: datahub.data.generateTimeSeries(12, 1, '2016-01-01', 'month', 1)
     }
 
     dataMulti.barData.forEach(function(d) {
+        if(Math.random()>0.5){
+            d.value = d.value * -1
+        }
+    })
+
+    dataMulti.referenceData.forEach(function(d) {
         if(Math.random()>0.5){
             d.value = d.value * -1
         }
