more unit tests

--- a/datahub-ui/test/index.html
+++ b/datahub-ui/test/index.html
@@ -31,7 +31,7 @@
   <script src="datahub-data-spec.js"></script>
   <script>
     mocha.checkLeaks();
-    mocha.globals(['d3']);
+    mocha.globals(['d3', '__on']);
     mocha.run();
   </script>
 </body>
