--- a/datahub-ui/test/index.html
+++ b/datahub-ui/test/index.html
@@ -28,6 +28,10 @@
 
   <script>mocha.setup('bdd')</script>
   <script src="datahub-chart-spec.js"></script>
+  <script src="datahub-chart-variant-spec.js"></script>
+  <script src="datahub-table-chart-spec.js"></script>
+  <script src="datahub-vertical-chart-spec.js"></script>
+  <script src="datahub-waterfall-chart-spec.js"></script>
   <script src="datahub-data-spec.js"></script>
   <script>
     mocha.checkLeaks();
