table-chart multiline labels, axisXFormat; 0.7.4

--- a/datahub-ui/example/index.html
+++ b/datahub-ui/example/index.html
@@ -805,7 +805,7 @@
                 ],
                 [
                     {key: 'name', value: 'zzz', label: 'zzz' },
-                    {key: 'actual', value: 10, label: 10 },
+                    {key: 'actual', value: 30, label: [30, 'Wh'] },
                     {key: 'plan', value: 40, label: 40 }
                 ],
                 [
