--- a/datahub-ui/example/index.html
+++ b/datahub-ui/example/index.html
@@ -804,12 +804,12 @@
                     {key: 'plan', value: 40, label: 40 }
                 ],
                 [
-                    {key: 'name', value: 'zzz', label: 'zzz' },
+                    {key: 'name', value: 'zzz', label: 'UK' },
                     {key: 'actual', value: 30, label: [30, 'Wh'] },
                     {key: 'plan', value: 40, label: 40 }
                 ],
                 [
-                    {key: 'name', value: 'mmm', label: 'mmm' },
+                    {key: 'name', value: 'mmm', label: 'Italy' },
                     {key: 'actual', value: 10, label: 10 },
                     {key: 'plan', value: 40, label: 40 }
                 ]
